update project name properly

--- a/Servable/CMakeLists.txt
+++ b/Servable/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(rpc_batch_scheduler C CXX)
+project(BatchingRPCServer C CXX)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_subdirectory(MXNetServable)
