--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(rpc_batch_scheduler C CXX)
+project(BatchingRPCServer C CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 
