--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,5 +64,5 @@ add_integration(BatchingRPCServer)
 # Add cmake target so we can also call make doc to create the documentation
 add_custom_target(doc
         COMMAND doxygen ./Doxyfile
-        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/doc
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/docs
 )
