add pre-commit clang-format hook

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,23 +20,23 @@ function(add_gtest test_name lib)
     add_dependencies(check Test${test_name})
 endfunction()
 
-function(add_integration)
+function(add_integration suffix)
     if(NOT ARGN)
         message(SEND_ERROR "Error: No Libraries to link to!")
         return()
     endif()
-    add_executable(TestIntegration EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/test/TestIntegration.cpp)
-    target_link_libraries(TestIntegration gtest_main)
+    add_executable(TestIntegration${suffix} EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/test/TestIntegrationMXNet.cpp)
+    target_link_libraries(TestIntegration${suffix} gtest_main)
     foreach(LIB ${ARGN})
         find_library(LIB
                 NAMES ${LIB}
                 HINTS ${CMAKE_BINARY_DIR}/Servable/* ${CMAKE_BINARY_DIR}/Server
         )
-        target_link_libraries(TestIntegration ${LIB})
+        target_link_libraries(TestIntegration${suffix} ${LIB})
     endforeach()
 
-    add_test(NAME TestIntegration COMMAND ${CMAKE_CURRENT_BINARY_DIR}/TestIntegration)
-    add_dependencies(check TestIntegration)
+    add_test(NAME TestIntegration${suffix} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/TestIntegration${suffix})
+    add_dependencies(check TestIntegration${suffix})
 endfunction()
 
 add_subdirectory(Server)
@@ -59,10 +59,29 @@ add_library(BatchingRPCServer SHARED ${SOURCES})
 target_link_libraries(BatchingRPCServer PUBLIC ${LIBS})
 target_include_directories(BatchingRPCServer PUBLIC ${INCLUDE_DIRS})
 
-add_integration(BatchingRPCServer)
+add_integration(MXNet BatchingRPCServer)
 
 # Add cmake target so we can also call make doc to create the documentation
 add_custom_target(doc
         COMMAND doxygen ./Doxyfile
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/docs
 )
+
+file(GLOB_RECURSE
+        ALL_CXX_SOURCE_FILES
+        Servable/*.[chi]pp Servable/*.[chi]xx Servable/*.cc Servable/*.hh Servable/*.ii Servable/*.[CHI]
+        Server/*.[chi]pp Server/*.[chi]xx Server/*.cc Server/*.hh Server/*.ii Server/*.[CHI]
+        test/*.[chi]pp test/*.[chi]xx test/*.cc test/*.hh test/*.ii test/*.[CHI]
+)
+
+find_program(CLANG_FORMAT "clang-format")
+if(CLANG_FORMAT)
+    add_custom_target(
+            clang-format
+            COMMAND ${CLANG_FORMAT}
+            -i
+            -style=file
+            ${ALL_CXX_SOURCE_FILES}
+
+    )
+endif()
