add dlib servable tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ endfunction()
 add_subdirectory(Server)
 add_subdirectory(Servable)
 
-find_package(protobuf 3.5 REQUIRED)
+find_package(Protobuf 3.5 REQUIRED)
 find_package(GRPC 1.5 REQUIRED)
 
 # Generate my proto files
