--- a/buildenv/Dockerfile
+++ b/buildenv/Dockerfile
@@ -38,7 +38,10 @@ RUN git clone --recursive --branch v1.8.2 --single-branch https://github.com/grp
 # ------ MXNet ------
 WORKDIR /opt/mxnet
 
-RUN make USE_CPP_PACKAGE=1 USE_CUDA_PATH=/usr/local/cuda USE_CUDA=1 USE_CUDNN=1 USE_BLAS=openblas USE_GPERFTOOLS=1
+RUN LIBRARY_PATH=/usr/local/cuda-9.0/targets/x86_64-linux/lib/stubs/:$LIBRARY_PATH \
+    LD_LIBRARY_PATH=/usr/local/cuda-9.0/targets/x86_64-linux/lib/stubs/:$LD_LIBRARY_PATH \
+    PATH=/usr/local/cuda-9.0/targets/x86_64-linux/lib/stubs/:$PATH \
+    make USE_CPP_PACKAGE=1 USE_CUDA_PATH=/usr/local/cuda USE_CUDA=1 USE_CUDNN=1 USE_BLAS=openblas USE_GPERFTOOLS=1
 
 RUN ln -s /opt/mxnet/lib/libmxnet.so /usr/lib; \
     mkdir /usr/include/mxnet; \
@@ -64,5 +67,7 @@ WORKDIR /opt/grpc
 
 RUN make && make install
 # ------ gRPC ------
+
+ENV MXNET_ROOT=/opt/mxnet
 
 RUN ldconfig
