--- a/Servable/DlibServable/CMakeLists.txt
+++ b/Servable/DlibServable/CMakeLists.txt
@@ -20,8 +20,7 @@ add_library(DlibServable SHARED
         ${ProtoSources} ${ProtoHeaders}
         )
 target_link_libraries(DlibServable
-        PUBLIC dlib::dlib
-        PUBLIC ${PROTOBUF_LIBRARIES}
+        PUBLIC dlib::dlib ${PROTOBUF_LIBRARIES}
         )
 target_include_directories(DlibServable
         PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
