fix dlib servable tests, now just need to bring the testing up to where it is for MXnetServable

--- a/Servable/CMakeLists.txt
+++ b/Servable/CMakeLists.txt
@@ -3,7 +3,7 @@ project(BatchingRPCServer C CXX)
 
 # Add subdirectory first to populate SOURCES, LIBS, INCLUDE_DIRS
 add_subdirectory(MXNetServable)
-#add_subdirectory(DlibServable)  # Not ready yet
+add_subdirectory(DlibServable)  # Not ready yet
 
 # Add this level's SOURCES, INCLUDE_DIRS and forward them and LIBS to upper scope
 set(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Servable.hpp ${SOURCES} PARENT_SCOPE)
